--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,3 @@
-# NOTE: update this with your service name
 service: discipleship-app-api
 
 # Create an optimized package for our functions
@@ -9,11 +8,14 @@ plugins:
   - serverless-bundle # Package our functions with Webpack
   - serverless-offline
 
+custom:
+  stage: ${opt:stage}
+
 provider:
   name: aws
-  runtime: nodejs8.10
-  stage: prod
+  profile: Discipleship
   region: us-east-1
+  runtime: nodejs8.10
   # To load environment variables externally
   # rename env.example to env.yml and uncomment
   # the following line. Also, make sure to not
@@ -23,7 +25,7 @@ provider:
 
   # 'iamRoleStatements' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
-  lambdaPolicies:
+  iamRoleStatements:
     - Effect: Allow
       Action:
         - dynamodb:DescribeTable
@@ -36,35 +38,38 @@ provider:
       Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
-  put_course:
+  putCourse:
     handler: src/api/put_course.main
     events:
       - http:
-        path: courses
-        method: post
-        cors: true
-        authorizer: aws_iam
-  get_course:
+          path: courses/{courseId}
+          method: post
+          cors: true
+          authorizer: aws_iam
+  getCourse:
     handler: src/api/get_course.main
     events:
       - http:
-        path: courses/{course_id}
-        method: get
-        cors: true
-        authorizer: aws_iam
-  list_courses:
+          path: courses/{courseId}
+          method: get
+          cors: true
+          authorizer: aws_iam
+  listCourses:
     handler: src/api/list_courses.main
     events:
       - http:
-        path: courses
-        method: get
-        cors: true
-        authorizer: aws_iam
-  delete_course:
+          path: courses
+          method: get
+          cors: true
+          authorizer: aws_iam
+  deleteCourse:
     handler: src/api/delete_course.main
     events:
       - http:
-        path: courses/{course_id}
-        method: delete
-        cors: true
-        authorizer: aws_iam
+          path: courses/{courseId}
+          method: delete
+          cors: true
+          authorizer: aws_iam
+
+resources:
+  - ${file(cloud_formation/discipleship.yml)}
