Changed to perform conditional writes in PutCourse, and changed its HTTP method from POST to PUT.

--- a/serverless.yml
+++ b/serverless.yml
@@ -43,7 +43,7 @@ functions:
     events:
       - http:
           path: courses/{courseId}
-          method: post
+          method: put
           cors: true
           authorizer: aws_iam
   getCourse:
